--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -77,12 +77,10 @@ select#time {
     color: $black-2a;
 }
 
-
-
-// input#date {
-//     -webkit-appearance: none;
-//     appearance: none;
-// }
+input#date {
+    -webkit-appearance: none;
+    appearance: none;
+}
 
 input::-webkit-datetime-edit {
     display: block;
