shd hv fixed the safari date input pb

--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -77,16 +77,15 @@ select#time {
     color: $black-2a;
 }
 
-// input#date {
-//     -webkit-appearance: none;
-//     appearance: none;
-// }
+input#date {
+    -webkit-appearance: none;
+    appearance: none;
+}
 
 input::-webkit-datetime-edit {
     display: block;
     padding: 0;
     text-align: left;
-    width: 100%;
 }
 
 .error-input {
