if the date selected is older than today

--- a/src/styles/scss-non-critical/sections/reservation-form/_form-inputs.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-inputs.scss
@@ -9,5 +9,12 @@
 }
 
 input#date {
-    width: 100%;
+    -webkit-appearance: none;
+    appearance: none;
+}
+
+input::-webkit-datetime-edit {
+    display: block;
+    padding: 0;
+    text-align: left;
 }
