added formSelect.js to change color onSelect

--- a/src/styles/scss-non-critical/partials/_colors.scss
+++ b/src/styles/scss-non-critical/partials/_colors.scss
@@ -62,9 +62,13 @@ textarea:focus {
     background-color: $white-1;
 }
 
-select#guest-number,
-select#time {
+select {
     color: $black-2a;
+}
+
+select.valid,
+select.valid {
+    color: $black-1;
 }
 
 #guest-number option:not(first-of-type),
