--- a/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
@@ -43,7 +43,7 @@
 }
 
 .reservation__message__close-button {
-    color: black;
+    color: $black-1;
     cursor: pointer;
     padding-inline: 0.5rem;
     font-size: clamp(1.5rem, 1rem + 1.5vw, 2rem);
@@ -60,7 +60,19 @@
     }
 }
 
-.reservation__message-content p,
+.reservation__message__timer {
+    color: $red-1;
+    padding-inline: 0.25rem;
+    text-align: center;
+    font-size: clamp(1rem, 1rem + 1.5vw, 1.3rem);
+    position: absolute;
+    top: -2rem;
+    right: 0;
+    z-index: 1000;
+    background-color: rgba(211, 211, 211, 0.85);
+}
+
+.reservation__message__paragraph2,
 .reservation__message-list {
     margin-left: 1rem;
 
@@ -80,11 +92,9 @@
         margin-left: 3rem;
     }
 
-    @include min-mq(lg) {
-        margin-left: 3.5rem;
-    }
 }
 
+.reservation__message__paragraph2,
 .reservation__message-list li:nth-of-type(even) {
     margin-right: 1rem;
 
@@ -104,23 +114,25 @@
         margin-right: 3rem;
     }
 
-    @include min-mq(lg) {
-        margin-right: 3.5rem;
-    }
 }
 
-.reservation__message-content p {
+.reservation__message__paragraph2 {
     padding-top: 1rem;
     padding-bottom: 0.25rem;
-    padding-right: 1.5rem;
 
     @include min-mq(sm) {
+        padding-top: 1.25rem;
+        padding-bottom: 0.375rem;
+    }
+
+    @include min-mq(md) {
         padding-top: 1.5rem;
+        padding-bottom: 0.5rem;
     }
 }
 
 .reservation__message-list {
-    padding-bottom: 1rem;
+    padding-bottom: 1.25rem;
     overflow: auto;
     height: 40vh;
     height: 40dvh;
@@ -135,11 +147,20 @@
         justify-content: center;
         align-items: start;
         text-align: left;
+        padding-bottom: 1.75rem;
+        height: auto;
     }
 
+    @include min-mq(md) {
+        padding-bottom: 2.25rem;
+    }
+}
+
+.reservation__message-list li:nth-of-type(even) {
+    text-decoration: 1px underline sandybrown;
+
     @include min-mq(sm) {
-        padding-bottom: 1.5rem;
-        height: auto;
+        text-decoration: none;
     }
 }
 
