text-underline-position: under;

--- a/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-message.scss
@@ -158,6 +158,7 @@
 
 .reservation__message-list li:nth-of-type(even) {
     text-decoration: 1px underline sandybrown;
+    text-underline-position: under;
 
     @include min-mq(sm) {
         text-decoration: none;
