--- a/src/styles/scss-critical/sections/menus/_menu-structure.scss
+++ b/src/styles/scss-critical/sections/menus/_menu-structure.scss
@@ -37,7 +37,7 @@
         border-radius: 25px 25px 0 0;
     }
 
-    .large-food-menu {
+    .large-menu__panel {
         border-radius: 0 0 15px 15px;
     }
 }
