--- a/src/styles/scss-non-critical/layouts/_find-us.scss
+++ b/src/styles/scss-non-critical/layouts/_find-us.scss
@@ -19,7 +19,7 @@ section.findus {
 }
 
 // for whole page vertical alignment
-.findus-container {
+.findus__container {
     margin-inline: auto;
 
     @include min-mq (xs) {
