--- a/src/styles/scss-non-critical/sections/reservation-form/_form-structure.scss
+++ b/src/styles/scss-non-critical/sections/reservation-form/_form-structure.scss
@@ -39,62 +39,62 @@
 
 // grid of inputs and textarea
 @include min-mq (sm) {
-    .reservation__form--name {
+    .reservation__form__name {
         grid-area: 1 / 1 / 2 / 2;
     }
 
-    .reservation__form--phone {
+    .reservation__form__phone {
         grid-area: 1 / 2 / 2 / 3;
     }
 
-    .reservation__form--email {
+    .reservation__form__email {
         grid-area: 2 / 1 / 3 / 2;
     }
 
-    .reservation__form--guest-number {
+    .reservation__form__guest-number {
         grid-area: 2 / 2 / 3 / 3;
     }
 
-    .reservation__form--date {
+    .reservation__form__date {
         grid-area: 3 / 1 / 4 / 2;
     }
 
-    .reservation__form--time {
+    .reservation__form__time {
         grid-area: 3 / 2 / 4 / 3;
     }
 
-    .reservation__form--message {
+    .reservation__form__optional-message {
         grid-area: 4 / 1 / 5 / 3;
     }
 
-    .reservation__form--bottom-part {
+    .reservation__form__bottom-part {
         grid-area: 5 / 1 / 6 / 3;
     }
 }
 
 // between lg and xl, showing 3 columns
 @include between-mq (lg, xl) {
-    .reservation__form--email {
+    .reservation__form__email {
         grid-area: 1 / 3 / 2 / 4;
     }
 
-    .reservation__form--guest-number {
+    .reservation__form__guest-number {
         grid-area: 2 / 1 / 3 / 2;
     }
 
-    .reservation__form--date {
+    .reservation__form__date {
         grid-area: 2 / 2 / 3 / 3;
     }
 
-    .reservation__form--time {
+    .reservation__form__time {
         grid-area: 2 / 3 / 3 / 4;
     }
 
-    .reservation__form--message {
+    .reservation__form__optional-message {
         grid-area: 3 / 1 / 5 / 4;
     }
 
-    .reservation__form--bottom-part {
+    .reservation__form__bottom-part {
         grid-area: 5 / 1 / 6 / 4;
     }
 }
